--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@
   --text-color: #333333;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--background-color);
